Updated files to support Amazon RDS and SQS

--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -9,19 +9,20 @@ base_log_folder = /usr/local/airflow/logs
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Set this to True if you want to enable remote logging.
-remote_logging = False
+remote_logging = True
 
 # Users must supply an Airflow connection id that provides access to the storage
 # location.
-remote_log_conn_id =
-remote_base_log_folder =
+remote_log_conn_id = s3_conn
+remote_base_log_folder = s3://{log_bucket_name}}/
 encrypt_s3_logs = False
 
 # Logging level
 logging_level = INFO
 
 # Logging level for Flask-appbuilder UI
-fab_logging_level = WARN
+#fab_logging_level = WARN # Default
+fab_logging_level = INFO
 
 # Logging class
 # Specify the class that will specify the logging configuration
@@ -66,7 +67,8 @@ default_timezone = utc
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor, KubernetesExecutor
-executor = SequentialExecutor
+#executor = SequentialExecutor # Default
+executor = CeleryExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
@@ -346,7 +348,7 @@ hide_paused_dags_by_default = False
 page_size = 100
 
 # Use FAB-based webserver with RBAC feature
-rbac = False
+rbac = True
 
 # Define the color of navigation bar
 navbar_color = #007A87
@@ -525,7 +527,8 @@ operation_timeout = 2
 # See:
 # http://docs.celeryproject.org/en/master/userguide/configuration.html#std:setting-broker_transport_options
 # Example: visibility_timeout = 21600
-# visibility_timeout =
+visibility_timeout = 3600
+region = ap-southeast-1
 
 [dask]
 
