Updated Airflow Config and Entrypoint Script

--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -14,7 +14,7 @@ remote_logging = True
 # Users must supply an Airflow connection id that provides access to the storage
 # location.
 remote_log_conn_id = s3_conn
-remote_base_log_folder = s3://{log_bucket_name}}/
+remote_base_log_folder = s3://%log_bucket_name%/
 encrypt_s3_logs = False
 
 # Logging level
